update_Skills_Experins

--- a/src/app/components/about-perfil/about-perfil.component.html
+++ b/src/app/components/about-perfil/about-perfil.component.html
@@ -16,7 +16,7 @@
         <div class="aboutPerfil-info">
             <h1>Developer Web</h1>
             <h3>Profecional en Desarrollo Web</h3>
-            <p>Con experiencia en desarrollo web, soy un profesional comprometido, con enfoque en el diseño y la tecnología. Mi experiencia como Tecnólogo en Análisis de Sistemas de Información y Diseñador Gráfico, junto con 26 meses de experiencia como desarrollador Full Stack, me han proporcionado una base sólida para abordar proyectos de manera integral. Mi enfoque se centra en el trabajo en equipo, la adaptabilidad y la resolución de problemas, lo que me permite enfrentar desafíos con confianza y entregar resultados de alta calidad en cada proyecto.</p>
+            <p>Soy un profesional comprometido con experiencia en desarrollo web, especializado en diseño y tecnología. Con formación en Análisis de Sistemas de Información y Diseño Gráfico con 26 meses como desarrollador Full Stack, poseo una base sólida para abordar proyectos de manera integral. Mi enfoque en el trabajo en equipo, la adaptabilidad y la resolución de problemas me permite enfrentar desafíos con confianza y entregar resultados de alta calidad.</p>
             <div class="aboutPerfil-idioma">
                 <h3>Idioma: <span>Ingles - B1</span> </h3>
             </div>
@@ -26,7 +26,7 @@
                 <div><span><span class="title">Diplomado: </span> Scrum Master</span> </div>
                 <div><span><span class="title">Diplomado: </span> Ofimatica Avanzada</span> </div>
                 <div><span><span class="title">Diplomado: </span> Full Stack Developer</span> </div>
-                <div><span><span class="title">Diplomado: </span> Programación Software</span> </div>
+                <div><span><span class="title">Diplomado: </span> Lógica Programación</span> </div>
             </div>
 
             <!-- Seccion de habilidades -->
