--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -49,7 +49,7 @@
             <div class="education-box">
                 <div class="education-content">
                     <div class="content">
-                        <div class="years"><i class='bx bxs-calendar'></i> Feb 2023 - (Actualmente)</div>
+                        <div class="years"><i class='bx bxs-calendar'></i> Feb 2023 - Jun 2024</div>
                         <h3>Desarrollo Frontend - Zona Logística</h3>
                         <p>Creación de interfaces de usuario atractivas y funcionales. Con conocimientos en HTML, CSS y JavaScript, así como frameworks modernos como Angular. Capacidad de hacer diseños y especificaciones en código limpio y eficiente. </p>
                     </div>
