--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -9,22 +9,42 @@
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>HTML <span>90%</span></h3>
+                        <h3>HTML <span>Avanzado</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>CSS / SASS <span>80%</span></h3>
+                        <h3>CSS / SASS <span>Medio</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Python<span>40%</span></h3>
+                        <h3>Python<span>Medio</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Angular / Ionic <span>75%</span></h3>
+                        <h3>Angular / Ionic <span>Medio / Avanzado</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>PHP <span>Basico</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>React <span>Basico</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>MySQL <span>Medio</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>MongoDB <span>Basico</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
@@ -38,22 +58,22 @@
             <div class="skills-box">
                 <div class="skills-content">
                     <div class="progress">
-                        <h3>Web Frontend <span>85%</span></h3>
+                        <h3>Web Frontend <span>2 Años</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Web Backend <span>45%</span></h3>
+                        <h3>Web Backend <span>1.6 Años</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Diseño Grafico <span>75%</span></h3>
+                        <h3>Diseño Grafico <span>5 Años</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>Bases Datos <span>45%</span></h3>
+                        <h3>Bases Datos <span>1 Año</span></h3>
                         <div class="bar"><span></span></div>
                     </div>
                 </div>
