--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="about-content">
         <h3>Full Stack Developer </h3>
-        <p>Técnologo en Análisis de Sistemas de Información y Diseñador Gráfico, con un toque de creatividad y un año de experiencia en desarrollo Frontend. Mi mundo gira en torno al diseño web y al desarrollo, donde combino lo visual con lo técnico para conectar con las necesidades de mis clientes y usuarios. </p>
+        <p>Profesional versátil y comprometido con una sólida experiencia en desarrollo web, capaz de manejar tanto el frontend como el backend de aplicaciones complejas, especializado en diseño y tecnología. Con habilidades en múltiples lenguajes de programación y frameworks como Python, Javascript, Typescript, Php, Ionic y React. Con conocimiento en bases de datos como MySQL y MongoDB. Desarrollando aplicaciones web completas y escalables junto a su documentanción. </p>
 
         <div class="btn-box btns">
             <a routerLink="/perfil" routerLinkActive="active" class="btn">Ver más</a>
