--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -25,16 +25,14 @@
         <div class="projec-column">
             <div class="card">
                 <div class="face front">
-                    <img src="../../../assets/Photo_Img.png" alt="Proeycto 1">
-                    <h3>API Pokemon</h3>
+                    <img src="../../../assets/Rick_and_Morty.png" alt="Proeycto 2">
+                    <h3>API Rick & Morty</h3>
                 </div>
                 <div class="face back">
-                    <h3>API Pokemon</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam facere ut doloribus, dolore quos
-                        et
-                        dicta ab temporibus repellendus, minima quis commodi libero ex incidunt.</p>
+                    <h2>API Rick & Morty</h2>
+                    <p>Desarrollo de una aplicación web que consume la API de Rick y Morty, mostrando personajes, ubicaciones y episodios, con funcionalidades de búsqueda y filtrado para una experiencia interactiva.</p>
                     <div class="link">
-                        <a href="#">Proyecto</a>
+                        <a href="https://api-rick-and-morty-rvux.onrender.com" target="_blank">Ver Proyecto</a>
                     </div>
                 </div>
             </div>
@@ -44,7 +42,7 @@
         <div class="projec-column">
             <div class="card">
                 <div class="face front">
-                    <img src="../../../assets/Logotipo_Crud_Tareas.png" alt="Proeycto_1">
+                    <img src="../../../assets/Photo_Img.png" alt="Proeycto_1">
                     <h3>CRUD</h3>
                 </div>
                 <div class="face back">
