--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -50,8 +50,8 @@
                 <div class="education-content">
                     <div class="content">
                         <div class="years"><i class='bx bxs-calendar'></i> Feb 2023 - Jun 2024</div>
-                        <h3>Desarrollo Frontend - Zona Logística</h3>
-                        <p>Creación de interfaces de usuario atractivas y funcionales. Con conocimientos en HTML, CSS y JavaScript, así como frameworks modernos como Angular. Capacidad de hacer diseños y especificaciones en código limpio y eficiente. </p>
+                        <h3>Desarrollo Full Stack - Zona Logística</h3>
+                        <p>Creación de interfaces de usuario atractivas y funcionales con Angular, así como frameworks híbrido como Ionic. Capacidad de administar y manejar el Backend, con Python en Flast API con un código limpio y eficiente para la base de datos MySQL. </p>
                     </div>
                 </div>
 
