--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="about-content">
         <h3>Full Stack Developer </h3>
-        <p>Profesional versátil y comprometido con una sólida experiencia en desarrollo web, capaz de manejar tanto el frontend como el backend de aplicaciones complejas, con habilidades en múltiples lenguajes de programación y frameworks como Python, Javascript, Typescript, Php, Ionic y React. Con conocimiento en MySQL y MongoDB. Desarrollando aplicaciones web completas y escalables junto a su documentanción. </p>
+        <p>Soy un desarrollador web, con habilidades de full stack, manejandó múltiples lenguajes de programación y frameworks como Python, Javascript, Typescript, Php, Ionic y React. Con conocimiento en bases de datos como MySQL y MongoDB. Desarrollando aplicaciones web completas y escalables junto a su documentanción. </p>
 
         <div class="btn-box btns">
             <a routerLink="/perfil" routerLinkActive="active" class="btn">Ver más</a>
