--- a/src/app/components/about-perfil/about-perfil.component.html
+++ b/src/app/components/about-perfil/about-perfil.component.html
@@ -14,9 +14,9 @@
 
         <!-- Container General -->
         <div class="aboutPerfil-info">
-            <h1>Developer Web</h1>
+            <h1>Full Stack Developer </h1>
             <h3>Profecional en Desarrollo Web</h3>
-            <p>Soy un profesional comprometido con experiencia en desarrollo web, especializado en diseño y tecnología. Con formación en Análisis de Sistemas de Información y Diseño Gráfico con 26 meses como desarrollador Full Stack, poseo una base sólida para abordar proyectos de manera integral. Mi enfoque en el trabajo en equipo, la adaptabilidad y la resolución de problemas me permite enfrentar desafíos con confianza y entregar resultados de alta calidad.</p>
+            <p>Con formación en Análisis de Sistemas de Información y Diseño Gráfico, con 26 meses como desarrollador Full Stack, poseo conocimiento para afrontar proyectos de manera integral. Mi enfoque, es el trabajo en equipo, la adaptabilidad y la resolución de problemas, esto me permite enfrentar desafíos con confianza y entregar resultados de alta calidad.</p>
             <div class="aboutPerfil-idioma">
                 <h3>Idioma: <span>Ingles - B1</span> </h3>
             </div>
