--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="about-content">
         <h3>Full Stack Developer </h3>
-        <p>Soy un desarrollador web, con habilidades de full stack, manejandó múltiples lenguajes de programación y frameworks como Python, Javascript, Typescript, Php, Ionic y React. Con conocimiento en bases de datos como MySQL y MongoDB. Desarrollando aplicaciones web completas y escalables junto a su documentanción. </p>
+        <p>Soy un Desarrollador Web FullStack, con dominio de varios lenguajes de programación y frameworks como: Python, Javascript, TypeScript, PHP, Ionic y React.  Con conocimiento de bases de datos realacionales (MySQL) y no relacionales (MongoDB). He desarrollado aplicaciones web completas, escalables y bien documentadas. </p>
 
         <div class="btn-box btns">
             <a routerLink="/perfil" routerLinkActive="active" class="btn">Ver más</a>
